Fix text jumping on mobile when an image is loaded in the Features Details

--- a/client/src/components/FeatureDetails/index.sass
+++ b/client/src/components/FeatureDetails/index.sass
@@ -22,6 +22,9 @@ $transitionDuration: calc(1.5*#{$duration})
   overflow: hidden
   justify-content: center
 
+.features__details_imgSection > .content__wrapper
+  align-self: flex-end
+
 .features__details_imgSection_img
   width: 100%
   height: 100%
@@ -29,6 +32,7 @@ $transitionDuration: calc(1.5*#{$duration})
 
 .features__details_imgSection, .features__details_contentSection
   width: 50%
+  height: 50%
   padding-left: $padding-standard
   padding-right: $padding-standard
 
